resource-testing.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
spec:
  # minReadySeconds: 30
  selector:
    matchLabels:
      app: queue
  replicas: 2
  template:
    metadata:
      labels: 
        app: queue
    spec:
      containers:
      - name: queue
        image: richardchesterwood/k8s-fleetman-queue:release2
        resources: 
          requests:
            memory: 300Mi
            cpu: 100m
