services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  # This defines what pods are defined by this service
  # I can connect with other services or external users
  selector: 
    app: queue

  ports:
    - name: http
      port: 8161
      nodePort: 30010

    - name: endpoint
      port: 61616

  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  # This defines what pods are defined by this service
  # I can connect with other services or external users
  selector: 
    app: webapp

  ports:
    - name: http
      port: 80
      nodePort: 30080

  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
spec:
  # This defines what pods are defined by this service
  # I can connect with other services or external users
  selector: 
    app: position-tracker

  ports:
    - name: http
      port: 8080

  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: fleetman-api-gateway
spec:
  # This defines what pods are defined by this service
  # I can connect with other services or external users
  selector: 
    app: api-gateway

  ports:
    - name: http
      port: 8080

  type: ClusterIP
