ingress-public.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-routing
spec:
  rules:
  - host: fleetman.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name : fleetman-webapp
            port: 
              number: 80
